...
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_visitor" />

    <!-- Tarjeta Usuario Visitante -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_visitor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
